tests/k8s_testcases/network-policy-checks-bad-path/matchexpressions_operator_null.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matchexpressions-operator-test-null
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app
        # null
        operator: null
      - key: app
        operator: Exists
      - key: tier
        operator: Exists
  policyTypes:
    - Ingress
    - Egress
